# AsterixCodec

./: .gitignore  CMakeLists.txt  README.md
src/asterix_codec_lib/: CMakeLists.txt  EIRS.doxyfile  Full_documentation.doxyfile
src/asterix_codec_lib/include/asterix_codec/: CodecInterface.h  DecoderInterface.h  EncoderInterface.h  Record.h  RecordCollection.h  asterix_codec.h
src/asterix_codec_lib/include/asterix_codec/facade/: CodecInterface.cpp  DecoderInterface.cpp  DecoderInterface_old.cpp  EncoderInterface.cpp  Record.cpp  RecordCollection.cpp
src/asterix_codec_lib/include/asterix_codec/facade/reports/: FailureReport.cpp  FailureReport.h  ReturnStatus.hpp  return_codes.h
src/asterix_codec_lib/include/config/: CommonVariables.h  Constants.h  FacadeCommonVariables.h
src/asterix_codec_lib/include/config/enum/: FilterTypeEnum.h  FunctionNameEnum.h  ItemTypeEnum.h  RepresentationModeEnum.h
src/asterix_codec_lib/include/data_model/: AsterixConfiguration.h  CategoriesFilters.h  CategoriesToFilter.h  CategoryConfiguration.h  CategoryFilter.h  CategoryItemsFilter.h  ItemsToFilter.h
src/asterix_codec_lib/include/data_model/asterix_description/: CategoryDescription.h  Item.h
src/asterix_codec_lib/include/data_model/blocking_queue/: BlockingQueueManager.h  DecoderBlockingQueue.h  ParserBlockingQueue.h
src/asterix_codec_lib/include/data_model/decoder_object_pool/: DecodedValueObjectPoolManager.h  ObjectPool.hpp  ParsedRecord.h
src/asterix_codec_lib/include/data_model/decoder_objects/: DoubleValue.h  ElementValue.hpp  FloatValue.h  IntegerValue.h  ParsedElement.h  SignedInteger16bitValue.h  SignedInteger32bitValue.h  SignedInteger64bitValue.h  SignedInteger8bitValue.h  StringValue.h  UnsignedInteger16bitValue.h  UnsignedInteger32bitValue.h  UnsignedInteger64bitValue.h  UnsignedInteger8bitValue.h
src/asterix_codec_lib/include/utils/: BitUtils.h  ConversionFromStringToEnum.hpp  DecodingUtils.h  ElementEncodingUtils.h  ItemEncodingUtils.h  ParsingUtils.h  PrintingUtils.h  decoderForParsedRecord.h  encoderForDecodedRecord.hpp
src/asterix_codec_lib/include/utils/asterix_json_description/: JsonCategoriesDescriptionLoader.h  JsonCategoriesDescriptionLoader_old.h  JsonCategoriesDescriptionValidator.h
src/asterix_codec_lib/lib/nlohmann_json/: json.hpp
src/asterix_codec_lib/lib/thread_pool/: ThreadPool.hpp
src/asterix_codec_lib/src/config/: CommonVariables.cpp  FacadeCommonVariables.cpp
src/asterix_codec_lib/src/config/enum/: FilterTypeEnum.cpp  FunctionNameEnum.cpp  ItemTypeEnum.cpp  RepresentationModeEnum.cpp
src/asterix_codec_lib/src/data_model/: AsterixConfiguration.cpp  CategoriesFilters.cpp  CategoriesToFilter.cpp  CategoryConfiguration.cpp  CategoryFilter.cpp  CategoryItemsFilter.cpp  ItemsToFilter.cpp
src/asterix_codec_lib/src/data_model/asterix_description/: CategoryDescription.cpp  Item.cpp
src/asterix_codec_lib/src/data_model/blocking_queue/: BlockingQueueManager.cpp  DecoderBlockingQueue.cpp  ParserBlockingQueue.cpp
src/asterix_codec_lib/src/data_model/decoder_object_pool/: DecodedValueObjectPoolManager.cpp  ParsedRecord.cpp
src/asterix_codec_lib/src/data_model/decoder_objects/: DoubleValue.cpp  FloatValue.cpp  IntegerValue.cpp  ParsedElement.cpp  SignedInteger16bitValue.cpp  SignedInteger32bitValue.cpp  SignedInteger64bitValue.cpp  SignedInteger8bitValue.cpp  StringValue.cpp  UnsignedInteger16bitValue.cpp  UnsignedInteger32bitValue.cpp  UnsignedInteger64bitValue.cpp  UnsignedInteger8bitValue.cpp
src/asterix_codec_lib/src/utils/: BitUtils.cpp  DecodingUtils.cpp  ElementEncodingUtils.cpp  ItemEncodingUtils.cpp  ParsingUtils.cpp  PrintingUtils.cpp  decoderForParsedRecord.cpp
src/asterix_codec_lib/src/utils/asterix_json_description/: JsonCategoriesDescriptionLoader.cpp  JsonCategoriesDescriptionLoader_old.cpp  JsonCategoriesDescriptionValidator.cpp
src/asterix_codec_lib/test/: CMakeLists.txt
src/asterix_codec_lib/test/asterix/: asterixConfiguration.json
src/asterix_codec_lib/test/asterix/input_pure_ast/: forTest_cat21ed24_cat62ed117withSPF-edited.ast
src/asterix_codec_lib/test/asterix/jsonconfig/cat021_Ed24/: cat021.json  filter.json  uapAndMandatoryItems.json
src/asterix_codec_lib/test/asterix/jsonconfig/cat062_Ed117/: cat062.json  filter.json  uapAndMandatoryItems.json
src/asterix_codec_lib/test/lib/googletest/: CMakeLists.txt
src/asterix_codec_lib/test/lib/googletest/cmake/: internal_utils.cmake
src/asterix_codec_lib/test/lib/googletest/samples/: prime_tables.h  sample1.cc  sample10_unittest.cc  sample1_unittest.cc  sample2.cc  sample2.h  sample2_unittest.cc  sample3-inl.h  sample3_unittest.cc  sample4.h  sample4_unittest.cc  sample5_unittest.cc  sample6_unittest.cc  sample7_unittest.cc  sample8_unittest.cc  sample9_unittest.cc
src/asterix_codec_lib/test/lib/googletest/scripts/: fuse_gtest_files.py  gen_gtest_pred_impl.py  pump.py  release_docs.py  upload.py
src/asterix_codec_lib/test/lib/googletest/src/: gtest-death-test.cc  gtest-filepath.cc  gtest-internal-inl.h  gtest-port.cc  gtest-printers.cc  gtest-test-part.cc  gtest-typed-test.cc  gtest.cc  gtest_main.cc
src/asterix_codec_lib/test/lib/googletest/test/: gtest-death-test_ex_test.cc  gtest-death-test_test.cc  gtest-filepath_test.cc  gtest-linked_ptr_test.cc  gtest-listener_test.cc  gtest-message_test.cc  gtest-options_test.cc  gtest-param-test2_test.cc  gtest-param-test_test.cc  (+48 more)
src/asterix_codec_lib/test/src/: AllTests.cpp  CodecTests.hpp  DecodingTests.cpp  EncodingTests.cpp  ParsingTests.cpp
src/client_app/: CMakeLists.txt
src/client_app/asterix/: asterixConfiguration.json  categoriesFilter.json
src/client_app/asterix/jsonconfig/cat001_Ed12/: cat001.json
src/client_app/asterix/jsonconfig/cat021/: uapAndMandatoryItems.json
src/client_app/asterix/jsonconfig/cat062_Ed117/: cat062.json  cat062_spf.json  uapAndMandatoryItems.json
src/client_app/asterix/jsonconfig/cat063_Ed14/: cat063.json  uapAndMandatoryItems.json
src/client_app/asterix/jsonconfig/cat065_Ed14/: cat065.json  cat065_ref.json  uapAndMandatoryItems.json
src/client_app/src/: main.cpp
(+300 files in other folders)
